# phys_plotter

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_web.sh  phys_plotter.py
.github/workflows/: rust.yml
docs/: index.html  phys_plotter.js  phys_plotter_bg.wasm  sw.js
src/: default_values.rs  egui_ui.rs  lib.rs  main.rs  plot.rs  save_format.rs  two_var_data.rs
src/data/: linear_data.rs  mod.rs  two_var_data.rs
src/egui_ui/: mod.rs
src/gui/: init.rs
src/plot/: label.rs  mod.rs  plot_gnuplot.rs  plot_plotters.rs  save_options.rs
