[package]
name = "phys_plotter"
description = "Linear data regression and plotting tool"
version = "0.2.2"
authors = ["Zhang Maiyun <myzhang1029@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle.bin.phys_plotter_gui]
name = "Physics Plotter"
identifier = "xyz.myzhangll.Physics.Plotter"

[dependencies]
clap = "2"
gnuplot = "0.0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

plotters = { version = "0.3", optional = true }

eframe = { version = "0.16", optional = true, features = ["persistence"] }
rfd = { version = "0.6", optional = true }

gio = { version = "0.9.1", optional = true }
glib = { version = "0.10.3", optional = true }
gtk = { version = "0.9.2", optional = true }
plotters-cairo = { version = "0.3.1", optional = true }

[features]
default = ["ui_cli", "plot_plotters"]
ui_cli = ["plot_plotters"]
ui_egui = ["eframe", "rfd"]
ui_gtk = ["gio", "glib", "gtk", "plotters-cairo", "plot_plotters"]
plot_plotters = ["plotters"]

[lib]
name = "phys_plotter"
path = "src/lib.rs"

[[bin]]
name = "phys_plotter"
path = "src/bin/ui_cli/main.rs"
required-features = ["ui_cli"]

# To build this, pass `--bin phys_plotter_egui --features=ui_egui`
[[bin]]
name = "phys_plotter_egui"
path = "src/bin/ui_egui/main.rs"
required-features = ["ui_egui"]

# To build this, pass `--bin phys_plotter_gtk --features=ui_gtk`
[[bin]]
name = "phys_plotter_gtk"
path = "src/bin/ui_gtk/main.rs"
required-features = ["ui_gtk"]
