[package]
name = "phys_plotter"
description = "Linear data regression and plotting tool"
version = "0.3.0"
authors = ["Zhang Maiyun <myzhang1029@hotmail.com>"]
edition = "2021"

[package.metadata.bundle.bin.phys_plotter_gui]
name = "Physics Plotter"
identifier = "xyz.myzhangll.Physics.Plotter"

[dependencies]
clap = { version = "3", features = ["cargo"] }
gnuplot = "0.0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

plotters = { version = "0.3", optional = true }

eframe = { version = "0.16", optional = true, features = ["persistence"] }
rfd = { version = "0.6", optional = true }

gio = { version = "0.9.1", optional = true }
glib = { version = "0.10.3", optional = true }
gtk = { version = "0.9.2", optional = true }
plotters-cairo = { version = "0.3.1", optional = true }

[features]
default = ["ui_cli", "plot_plotters"]
ui_cli = ["plot_plotters"]
ui_egui = ["eframe"]
ui_egui_with_file = ["rfd", "ui_egui"]
ui_gtk = ["gio", "glib", "gtk", "plotters-cairo", "plot_plotters"]
plot_plotters = ["plotters"]

[lib]
name = "phys_plotter"
path = "src/lib.rs"

crate-type = ["cdylib", "rlib"]

[[bin]]
name = "phys_plotter"
path = "src/bin/ui_cli/main.rs"
required-features = ["ui_cli"]

# To build this, pass `--bin phys_plotter_egui --features=ui_egui`
[[bin]]
name = "phys_plotter_egui"
path = "src/bin/ui_egui/main.rs"
required-features = ["ui_egui"]

# To build this, pass `--bin phys_plotter_gtk --features=ui_gtk`
[[bin]]
name = "phys_plotter_gtk"
path = "src/bin/ui_gtk/main.rs"
required-features = ["ui_gtk"]
