[package]
name = "phys_plotter"
description = "Linear data regression and plotting tool"
version = "0.3.1"
authors = ["Zhang Maiyun <myzhang1029@hotmail.com>"]
edition = "2021"

[package.metadata.bundle.bin.phys_plotter_gui]
name = "Physics Plotter"
identifier = "xyz.myzhangll.Physics.Plotter"

[dependencies]
clap = { version = "3", features = ["cargo"] }
gnuplot = "0.0.37"
plotters = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

eframe = { version = "0.16", optional = true, features = ["persistence"] }
rfd = { version = "0.6", optional = true }

gio = { version = "0.9.1", optional = true }
glib = { version = "0.10.3", optional = true }
gtk = { version = "0.9.2", optional = true }
plotters-cairo = { version = "0.3.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document"] }
futures = "0.3"

[features]
default = ["ui_cli"]
ui_cli = []
ui_egui = ["eframe", "rfd"]
ui_gtk = ["gio", "glib", "gtk", "plotters-cairo"]

[lib]
name = "phys_plotter"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Disable this on wasm32
[[bin]]
name = "phys_plotter"
path = "src/bin/ui_cli/main.rs"
required-features = ["ui_cli"]

# To build this, pass `--bin phys_plotter_egui --features=ui_egui`
[[bin]]
name = "phys_plotter_egui"
path = "src/bin/ui_egui/main.rs"
required-features = ["ui_egui"]

# To build this, pass `--bin phys_plotter_gtk --features=ui_gtk`
[[bin]]
name = "phys_plotter_gtk"
path = "src/bin/ui_gtk/main.rs"
required-features = ["ui_gtk"]
